# dd40

./: CLAUDE.md  Cargo.toml  INCONSISTENCIES.md  NETWORK_IMPLEMENTATION_SUMMARY.md  README.md  SPEC.md  STRUCTURE.md
.agents/skills/dd40-architecture/: SKILL.md
.agents/skills/dd40-create-system/: SKILL.md
.agents/skills/dd40-create-system/evals/: evals.json
.agents/skills/lightyear/: SKILL.md
.agents/skills/lightyear/references/: protocol.md  replication.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_request.md  improvement.md
crates/character_core/: Cargo.toml  README.md
crates/character_core/src/: builder.rs  bundles.rs  components.rs  controller.rs  face.rs  lib.rs  mining_state.rs  plugin.rs  prelude.rs  system_sets.rs  targeted_block.rs
crates/character_gui/: Cargo.toml
crates/character_gui/src/: block_highlight.rs  lib.rs  plugin.rs
crates/character_interaction/: Cargo.toml  README.md
crates/character_interaction/src/: face_drive.rs  interact.rs  lib.rs  mining.rs  placement.rs  plugin.rs  targeting.rs  validators.rs
crates/chunk_storage/: Cargo.toml  README.md
crates/chunk_storage/src/: lib.rs  plugin.rs  provider.rs
crates/chunk_storage/src/serialization/: mod.rs  v1.rs  v1_versioned.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: builder_extra.rs  common.rs  debug.rs  lib.rs  loading.rs  macros.rs  plugin.rs  state.rs  tools.rs  vanilla_blocks.rs
crates/core/src/block/: events.rs  mod.rs  registry.rs
crates/core/src/character/: builder.rs  controller.rs  mod.rs  plugin.rs
crates/core/src/character/physics/: block_collision.rs  character_collision.rs  integration.rs  mod.rs  spatial_cache.rs
crates/core/src/chunk/: authority.rs  cache.rs  change.rs  config.rs  events.rs  mod.rs
crates/core/src/world/: mod.rs
crates/debug_ui/: Cargo.toml  QUICKSTART.md  README.md
crates/debug_ui/src/: custom.rs  lib.rs  orientation_gizmo.rs
crates/gui/: Cargo.toml  README.md
crates/gui/src/: crosshair.rs  lib.rs  plugin.rs
crates/integration_character_physics/: Cargo.toml
crates/integration_character_physics/src/: controller.rs  lib.rs  plugin.rs
crates/integration_character_physics/tests/: character_controller.rs
crates/inventory_core/: Cargo.toml  README.md
crates/inventory_core/src/: character_ext.rs  inventory.rs  lib.rs  plugin.rs  prelude.rs
crates/item_core/: Cargo.toml  README.md
crates/item_core/src/: active_item.rs  lib.rs  messages.rs  plugin.rs  prelude.rs  registry.rs
crates/network/: Cargo.toml  README.md
crates/network/src/: character_ext.rs  lib.rs  protocol.rs
crates/network/src/character/: client.rs  mod.rs  server.rs
crates/network/src/client/: block_mining.rs  block_placement.rs  character.rs  chunk_provider.rs  connection.rs  loading.rs  mod.rs  plugin.rs  spawn.rs
crates/network/src/connection/: client.rs  mod.rs  server.rs  shared.rs
crates/network/src/server/: block_mining.rs  block_placement.rs  block_updates.rs  character.rs  chunk_provider.rs  chunk_requests.rs  connection.rs  mod.rs  spawn.rs  user.rs
crates/network/src/shared/: character.rs  constants.rs  mod.rs
crates/physics/: Cargo.toml  README.md
crates/physics/src/: block_collision.rs  character_collision.rs  integration.rs  lib.rs  plugin.rs  spatial_cache.rs
crates/physics/tests/: character_controller.rs  physics_behavior.rs
crates/physics_core/: Cargo.toml  README.md
crates/physics_core/src/: character_ext.rs  components.rs  lib.rs  plugin.rs  prelude.rs  system_sets.rs
crates/physics_core/src/resources/: mod.rs  spatial_cache.rs
crates/player/: Cargo.toml  README.md
crates/player/src/: lib.rs
crates/player/src/block_interaction/: mining.rs  mod.rs  placement.rs  targeting.rs
crates/player_input/: Cargo.toml  README.md
crates/player_input/src/: lib.rs  plugin.rs  state.rs  systems.rs
crates/player_movement/: Cargo.toml  README.md
crates/player_movement/src/: components.rs  lib.rs  plugin.rs  systems.rs
crates/renderer/: Cargo.toml  README.md
crates/renderer/src/: chunk_mesh.rs  creation.rs  face_culling.rs  greedy_mesh.rs  lib.rs  lod.rs  mesh_builder.rs  mesh_task.rs  render_state.rs  systems.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: main.rs
crates/vanilla_palette/: Cargo.toml
crates/vanilla_palette/src/: blocks.rs  items.rs  lib.rs  tools.rs
crates/world/: Cargo.toml  README.md
crates/world/src/: lib.rs  plugin.rs  rendering.rs
crates/world/src/generators/: bowl.rs  flat.rs  mod.rs
docs/: app-states.md  block-system.md  character-physics.md  chunk-system.md
examples/: block_events.rs  custom_blocks.md  custom_blocks_ordering.rs  debug_ui_demo.rs
