[workspace]
members = [
    "crates/core",
    "crates/gui",
    "crates/world",
    "crates/player",
    "crates/client",
    "crates/server",
    "crates/debug_ui",
    "crates/network",
    "crates/chunk_storage",
    "crates/renderer",
    "crates/vanilla_palette",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false }
dd40_core = { path = "crates/core" }
dd40_gui = { path = "crates/gui" }
dd40_world = { path = "crates/world" }
dd40_player = { path = "crates/player" }
dd40_renderer = { path = "crates/renderer" }
dd40_debug_ui = { path = "crates/debug_ui" }
dd40_network = { path = "crates/network" }
dd40_chunk_storage = { path = "crates/chunk_storage" }
dd40_vanilla_palette = { path = "crates/vanilla_palette" }
