[workspace]
members = [
    "crates/core",
    "crates/physics_core",
    "crates/physics",
    "crates/character_core",
    "crates/player_input",
    "crates/character_interaction",
    "crates/gui",
    "crates/character_gui",
    "crates/world",
    "crates/client",
    "crates/server",
    "crates/debug_ui",
    "crates/network",
    "crates/chunk_storage",
    "crates/renderer",
    "crates/vanilla_palette",
    "crates/item_core",
    "crates/inventory_core",
    "crates/integration_character_physics",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Andreas H. Klostergaard <akl@klostergaard.net>"]

[workspace.dependencies]
bevy = { version = "0.18", default-features = false }
dd40_core = { path = "crates/core" }
dd40_physics_core = { path = "crates/physics_core" }
dd40_physics = { path = "crates/physics" }
dd40_character_core = { path = "crates/character_core" }
dd40_player_input = { path = "crates/player_input" }
dd40_character_interaction = { path = "crates/character_interaction" }
dd40_gui = { path = "crates/gui" }
dd40_character_gui = { path = "crates/character_gui" }
dd40_world = { path = "crates/world" }
dd40_renderer = { path = "crates/renderer" }
dd40_debug_ui = { path = "crates/debug_ui" }
dd40_network = { path = "crates/network" }
dd40_chunk_storage = { path = "crates/chunk_storage" }
dd40_vanilla_palette = { path = "crates/vanilla_palette" }
dd40_item_core = { path = "crates/item_core" }
dd40_inventory_core = { path = "crates/inventory_core" }
dd40_integration_character_physics = { path = "crates/integration_character_physics" }
