[package]
name = "dd40_chunk_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bevy            = { workspace = true, default-features = false, features = ["bevy_log", "bevy_state", "bevy_color"] }
dd40_core       = { workspace = true }
crossbeam-channel = "0.5"
