[package]
name = "dd40_client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dd40_client"
path = "src/main.rs"

[features]
default = ["debug_network"]
debug_network = ["dd40_network/debug_ui", "dep:lightyear_ui"]

[dependencies]
# Client uses the full Bevy feature set (window, rendering, audio, etc.).
bevy = { workspace = true, default-features = true }
dd40_core = { workspace = true, features = ["debug_logging"] }
dd40_physics = { workspace = true }
dd40_world = { workspace = true }
dd40_player = { workspace = true }
dd40_debug_ui = { workspace = true }
dd40_network = { workspace = true, features = ["client"] }
dd40_renderer = { workspace = true }
dd40_gui = { workspace = true }
dd40_vanilla_palette = { workspace = true }
lightyear_ui = { version = "0.26", optional = true }
bevy-inspector-egui = "0.36.0"
