[package]
name = "dd40_core"
version = "0.1.0"
edition = "2024"

[features]
## Enables DEBUG-level logging in `log_plugin()` instead of the default INFO level.
debug_logging = []

[dependencies]
bevy = { workspace = true, default-features = false, features = ["bevy_state", "bevy_color", "bevy_log"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
