[package]
name = "dd40_network"
version = "0.1.0"
edition = "2024"

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
bevy = { workspace = true, features = ["default"] }
dd40_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
lightyear = { version = "0.26", features = ["udp", "netcode"] }
rand = "0.8"
crossbeam-channel = "0.5"

[dev-dependencies]
serde_json = "1.0"
