[package]
name = "dd40_network"
version = "0.1.0"
edition = "2024"

[features]
default = ["client", "server"]
client = []
server = []
debug_ui = ["lightyear/debug"]

[dependencies]
bevy = { workspace = true, features = ["bevy_log", "bevy_state", "async_executor", "multi_threaded"] }
dd40_core = { path = "../core" }
dd40_physics_core = { workspace = true }
dd40_character_core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
lightyear = { version = "0.26", features = ["udp", "netcode", "std", "input_native", "client", "server", "replication", "prediction", "interpolation"] }
rand = "0.8"
crossbeam-channel = "0.5"

[dev-dependencies]
serde_json = "1.0"
