[package]
name = "dd40_player"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, default-features = false }
dd40_core = { workspace = true }
dd40_character_core = { workspace = true }
dd40_physics_core = { workspace = true }
dd40_player_movement = { workspace = true }
dd40_character_interaction = { workspace = true }
