[package]
name = "dd40_renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_pbr",
    "bevy_render",
    "bevy_asset",
    "bevy_color",
    "bevy_state",
    "bevy_log",
    "bevy_mesh",
] }
dd40_core = { workspace = true }
dd40_physics_core = { workspace = true }
