[package]
name = "dd40_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dd40_server"
path = "src/main.rs"

[dependencies]
# Server runs headless – no window, no rendering, no audio.
bevy = { version = "0.18", default-features = false, features = ["multi_threaded"] }
dd40_core = { workspace = true, features = ["debug_logging"] }
dd40_world = { workspace = true }
dd40_network = { workspace = true, features = ["server"] }
dd40_chunk_storage = { workspace = true }
