[package]
name = "dd40_server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "dd40_server"
path = "src/main.rs"

[dependencies]
# Server runs headless – no window, no rendering, no audio.
bevy = { version = "0.18", default-features = false, features = ["multi_threaded"] }
dd40_core = { workspace = true, features = ["debug_logging"] }
dd40_physics = { workspace = true }
dd40_integration_character_physics = { workspace = true }
dd40_world = { workspace = true }
dd40_network = { workspace = true, features = ["server"] }
dd40_chunk_storage = { workspace = true }
dd40_vanilla_palette = { workspace = true }
dd40_character_interaction = { workspace = true }
